--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 body {
-      background-color:rgb(230, 230, 230)
+      background-color:rgb(230, 230, 230);
+      margin:0;
+      padding:0;
             
         }
 
         header {
                 background-color: rgb(41, 41, 41);
                 text-align: center;
-                border: rgb(41, 41, 41) 5px solid;
-                grid-area: area1;
+                padding:10px;
+               
 
          } 
 
@@ -15,36 +17,32 @@ body {
         nav {
                 background-color: rgb(82, 82, 82);
                 text-align: center;
-                border: rgb(82, 82, 82); 5px solid;
-                grid-area: area2;
-                word-spacing: 1cm;
+                padding:10px;
+                
         }
 
         nav a { 
                text-decoration:none;
-                
+                margin:10px;
         }
 
         .container {
-                
+                max-width: 800px;
+                margin:20px auto;
                 background-color:white;
-                margin-left: 100px ;
-                margin-right: 100px ;
                 border-radius: 5px;
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-                height:320px;
-                padding-right:20px;
-                padding-left:20px;
+                padding:20px;
               
                 
                 
         }
         .box {
                 background-color:rgb(62, 152, 255);
-                height:50px;
                 text-align: center;
                 color:white;
-                border:5px solid;
+                padding:20px;
+                margin:10px;
                 
                 
                
@@ -52,20 +50,17 @@ body {
 
         .red-box {
                 background-color:red;
-                height:50px;
-                text-align: center;
+             
                 
         }
 
         .green-box {
                 background-color:green;
-                height:50px;
-                text-align: center;
+               
         }
 
         .blue-box {
                 background-color:blue;
-                height:50px;
-                text-align: center;
+                
             
         }
